# customer_lifetime_value_and_cross_sell_predictor

./: .dockerignore  .env.example  .gitignore  Amex Research latest projects overview.docx  README.md  azure_train.py  day1_implementation_plan.md  day4_migration_walkthrough.md  day6_implementation_plan_snowflake.md  day7_implementation_plan_sqlalchemy.md  day8_task.md  day_2_implementation_plan.md  day_3_implementation_plan_mlflow.md  day_5_implementation_plan_dashboard.md  docker-compose.yml  dspy_implementation_plan.md  dspy_implementation_plan_approved.md  dspy_implementation_walkthrough.md  implementation_plan_n8n.md  ml_assessment_report.md  powerbi_dashboard.pbix  powerbi_executive_dashboard_blueprint.md  powerbi_executive_dashboard_blueprint_sophisticated.md  powerbi_executive_dashboard_blueprintdf.md  pyproject.toml  requirements-azureml-v1.txt  requirements.txt  run_dbt.py  system_vulnerabilities_hardening_walkthrough.md  terraform.tfstate
airflow/: Dockerfile
api/: Dockerfile  main.py
dashboard/: Dockerfile  app.py
data/: generate_synthetic_data.py  snowflake_loader.py
docs/: model_card.md
features/: feature_engineering.py  feature_engineering_pyspark.py
kubernetes/: api-config.yaml  api-deployment.yaml  api-service.yaml  clv-secrets.yaml.template  dashboard-deployment.yaml  dashboard-service.yaml  network-policy.yaml
marketing/: __init__.py  outreach_program.py
models/: clv_model.py  cross_sell_model.py  generate_checksums.py  segmentation.py  survival_model.py
monitoring/: prometheus.yml
n8n/: churn_alert_workflow.json
terraform/: main.tf  (+1 more)
(+52 files in other folders)
